--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,18 @@
            <java.version>1.8</java.version>
            <maven.compiler.source>1.6</maven.compiler.source>
            <maven.compiler.target>1.6</maven.compiler.target>
+         
+           
+		    <jdk.version>1.8</jdk.version>
+		    <spring.version>5.1.2.RELEASE</spring.version>
+		    <junit.version>4.11</junit.version>
+		    <log4j.version>1.2.17</log4j.version>
+		    <sonar.host.url>http://13.234.110.62:9000/</sonar.host.url>
+		    <sonar.login>admin</sonar.login>
+		    <sonar.password>admin</sonar.password> 
+		    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+
      </properties>
 
       <dependencies>
